--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
   </head>
   <body>
     <header>
+      <a href="#">Webstudio</a>
+
       <nav>
-        <a href="#">Webstudio</a>
+        <ul>
+          <li><a href="#">Studio</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contacts</a></li>
+        </ul>
       </nav>
+
+      <ul>
+        <li><a href="">info@webstudio.com</a></li>
+        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      </ul>
     </header>
   </body>
 </html>
