--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <header>
-      <a href="#">Webstudio</a>
-
       <nav>
+        <a href="#">WEBSTUDIO</a>
+
         <ul>
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
@@ -22,5 +22,6 @@
         <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
     </header>
+    <main></main>
   </body>
 </html>
