--- a/index.html
+++ b/index.html
@@ -9,19 +9,71 @@
     <header>
       <nav>
         <a href="#">WEBSTUDIO</a>
-
         <ul>
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contacts</a></li>
         </ul>
       </nav>
-
       <ul>
         <li><a href="">info@webstudio.com</a></li>
         <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
     </header>
-    <main></main>
+    <main>
+      <h2>Effective Solutions for Your Business</h2>
+      <button>Order Service</button>
+
+      <ul>
+        <li><b>Strategy</b></li>
+        <p>
+          Our goal is to indentify the business problem to walk away with the
+          perfect and creative solution
+        </p>
+        <li><b>Punctuality</b></li>
+        <p>
+          Bring the key message to the brand's audinece for the best price
+          within the shortest possible of time
+        </p>
+        <li><b>Diligence</b></li>
+        <p>
+          Research and confirm brands that present the storngest digital growth
+          opportunities and minimize risk
+        </p>
+        <li><b>Technologies</b></li>
+        <p>
+          Design practice focused on digital experiences. We bring forth a deep
+          passion for problem solving
+        </p>
+      </ul>
+      <h2>What we are doing</h2>
+      <ul>
+        <li><img src="/Image/monitor.jpg" alt="monitor" /></li>
+        <li><img src="/Image/phone.jpg" alt="phone" /></li>
+        <li><img src="/Image/phoneandlaptop.jpg" alt="phoneandlaptop" /></li>
+      </ul>
+      <h2>Our Team</h2>
+      <ul>
+        <li><img src="/Image/Mark.jpg" alt="Mark Guerrero" srcset="" /></li>
+        <p><b>Mark Guerrero</b></p>
+        <p>Product Designer</p>
+        <li><img src="/Image/Tom.jpg" alt="Tom Ford" srcset="" /></li>
+        <p><b>Tom Ford</b></p>
+        <p>Frontend Developer</p>
+        <li><img src="/Image/Camila.jpg" alt="Camila Garcia" srcset="" /></li>
+        <p><b>Camila Garcia</b></p>
+        <p>Marketing</p>
+        <li><img src="/Image/Daniel.jpg" alt="Daniel Wilson" srcset="" /></li>
+        <p><b>Daneil Wilson</b></p>
+        <p>UI Designer</p>
+      </ul>
+    </main>
+    <footer>
+      <a href="#">WEBSTUDIO</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
