--- a/index.html
+++ b/index.html
@@ -25,26 +25,34 @@
       <button>Order Service</button>
 
       <ul>
-        <li><b>Strategy</b></li>
-        <p>
-          Our goal is to indentify the business problem to walk away with the
-          perfect and creative solution
-        </p>
-        <li><b>Punctuality</b></li>
-        <p>
-          Bring the key message to the brand's audinece for the best price
-          within the shortest possible of time
-        </p>
-        <li><b>Diligence</b></li>
-        <p>
-          Research and confirm brands that present the storngest digital growth
-          opportunities and minimize risk
-        </p>
-        <li><b>Technologies</b></li>
-        <p>
-          Design practice focused on digital experiences. We bring forth a deep
-          passion for problem solving
-        </p>
+        <li>
+          <h3>Strategy</h3>
+          <p>
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+          </p>
+        </li>
+        <li>
+          <h3>Punctuality</h3>
+          <p>
+            Bring the key message to the brand's audience for the best price
+            within the shortest possible time.
+          </p>
+        </li>
+        <li>
+          <h3>Diligence</h3>
+          <p>
+            Research and confirm brands that present the strongest digital
+            growth opportunities and minimize risk.
+          </p>
+        </li>
+        <li>
+          <h3>Technologies</h3>
+          <p>
+            Design practice focused on digital experiences. We bring forth a
+            deep passion for problem-solving.
+          </p>
+        </li>
       </ul>
       <h2>What we are doing</h2>
       <ul>
@@ -54,18 +62,26 @@
       </ul>
       <h2>Our Team</h2>
       <ul>
-        <li><img src="/Image/Mark.jpg" alt="Mark Guerrero" srcset="" /></li>
-        <p><b>Mark Guerrero</b></p>
-        <p>Product Designer</p>
-        <li><img src="/Image/Tom.jpg" alt="Tom Ford" srcset="" /></li>
-        <p><b>Tom Ford</b></p>
-        <p>Frontend Developer</p>
-        <li><img src="/Image/Camila.jpg" alt="Camila Garcia" srcset="" /></li>
-        <p><b>Camila Garcia</b></p>
-        <p>Marketing</p>
-        <li><img src="/Image/Daniel.jpg" alt="Daniel Wilson" srcset="" /></li>
-        <p><b>Daneil Wilson</b></p>
-        <p>UI Designer</p>
+        <li>
+          <img src="/Image/Mark.jpg" alt="Mark Guerrero" width="250" />
+          <p><b>Mark Guerrero</b></p>
+          <p>Product Designer</p>
+        </li>
+        <li>
+          <img src="/Image/Tom.jpg" alt="Tom Ford" width="250" />
+          <p><b>Tom Ford</b></p>
+          <p>Frontend Developer</p>
+        </li>
+        <li>
+          <img src="/Image/Camila.jpg" alt="Camila Garcia" width="250" />
+          <p><b>Camila Garcia</b></p>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img src="/Image/Daniel.jpg" alt="Daniel Wilson" width="250" />
+          <p><b>Daneil Wilson</b></p>
+          <p>UI Designer</p>
+        </li>
       </ul>
     </main>
     <footer>
