--- a/index.html
+++ b/index.html
@@ -64,22 +64,22 @@
       <ul>
         <li>
           <img src="/Image/Mark.jpg" alt="Mark Guerrero" width="250" />
-          <p><b>Mark Guerrero</b></p>
+          <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </li>
         <li>
           <img src="/Image/Tom.jpg" alt="Tom Ford" width="250" />
-          <p><b>Tom Ford</b></p>
+          <h3>Tom Ford</h3>
           <p>Frontend Developer</p>
         </li>
         <li>
           <img src="/Image/Camila.jpg" alt="Camila Garcia" width="250" />
-          <p><b>Camila Garcia</b></p>
+          <h3>Camila Garcia</h3>
           <p>Marketing</p>
         </li>
         <li>
           <img src="/Image/Daniel.jpg" alt="Daniel Wilson" width="250" />
-          <p><b>Daneil Wilson</b></p>
+          <h3>Daneil Wilson</h3>
           <p>UI Designer</p>
         </li>
       </ul>
